--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 FLASK_ENV='development'
 SECRET_KEY='secret_key'
 DATABASE_URL='sqlite:///database.db'
-ROUTE_ADMIN_DATAVIEW='/admin-dataview'
+DATABASE_URL_TESTING=sqlite:///:memory:
